Project

General

Profile

Actions

Bug #11199

closed

IO.copy_stream degrade that can't call pathname to pathname

Bug #11199: IO.copy_stream degrade that can't call pathname to pathname

Added by ksss (Yuki Kurihara) over 11 years ago. Updated almost 11 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.3.0dev (2015-05-30 trunk 50686) [x86_64-darwin14]
[ruby-dev:49008]

Description

IO.copy_stream について、2.2.2〜2.3.0dev間で動作に差異がありました。

再現スクリプトを添付します。

#! /usr/bin/env ruby

require 'pathname'

IO.write "src", "ok"
src = Pathname.new("src")
dst = Pathname.new("dst")
IO.copy_stream src, dst
puts IO.read("dst")
$ ruby --version
ruby 2.2.2p95 (2015-04-13 revision 50295) [x86_64-darwin14]
$ ruby copy_stream.rb
ok
$ ruby --version
ruby 2.3.0dev (2015-05-30 trunk 50686) [x86_64-darwin14]
$ ruby copy_stream.rb
copy_stream.rb:8:in `read': no implicit conversion from string (TypeError)
	from copy_stream.rb:8:in `read'
	from copy_stream.rb:8:in `copy_stream'
	from copy_stream.rb:8:in `<main>'

仕様変更でなければ、互換性を壊さないために2.2.2の動作を期待します。


Files

copy_stream.rb (160 Bytes) copy_stream.rb ksss (Yuki Kurihara), 05/30/2015 10:36 AM

Related issues 1 (0 open1 closed)

Related to Ruby - Bug #11015: IO.copy_stream does not advance Tempfile destinationClosedActions
Actions

Also available in: PDF Atom